--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <title>Minha primeira página!</title>
-        <meta charset="utf-8"/>
-    </head>
 
-    <body>
+<head>
+    <title>Minha primeira página!</title>
+    <meta charset="utf-8" />
+</head>
 
-        
+<body>
 
-    </body>
+    <h1>Minha história</h1>
+
+    <p>Sou a <strong>Natali</strong>, nasci em Guarulhos/SP em 1985.</p>
+
+</body>
 
 </html>
